<resources>
    <string name="app_name">exaudi-nebula</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome_user">Halo, %s!</string>
    <string name="dashboard_title">Dashboard Bina Desa</string>
    <string name="about_title">Tentang Bina Desa</string>
    <string name="about_definition">Bina Desa adalah program pengabdian masyarakat untuk membantu meningkatkan kualitas hidup di pedesaan melalui teknologi dan edukasi.</string>
    <string name="about_features">Fitur Utama</string>
    <string name="about_feature_list">• Kalkulator Bangun Ruang\n• Informasi Desa\n• Laporan Kegiatan\n• Akses Website Desa</string>
    <string name="profile_name">Exaudi Banjarnahor</string>
    <string name="profile_role">Android Developer</string>
    <string name="contact_info">Informasi Kontak</string>
    <string name="contact_email">Email: exaudi@example.com</string>
    <string name="contact_github">GitHub: @exaudinebula</string>
    <string name="login_welcome">Silahkan Masuk</string>
    <string name="login_subtitle">Masuk untuk mengakses layanan desa</string>
    <string name="login_btn">MASUK SEKARANG</string>
    <string name="forgot_password">Lupa Password? </string>
    <string name="contact_admin">Hubungi Admin</string>
    <string name="copyright">© 2024 Bina Desa Exaudi Banjarnahor</string>
    <string name="splash_slogan">Membangun Desa, Mencerdaskan Bangsa</string>
    <string name="logo_desc">Logo Bina Desa</string>
</resources>
